kylin-display-switch (3.0.12kylin5) v101; urgency=medium

  * KDS按下任意按键退出，屏蔽X86Display。

 -- hebing <hebing@kylinos.cn>  Thu, 25 Feb 2021 15:58:53 +0800

kylin-display-switch (3.0.12kylin4~hw4) v101; urgency=medium

  * 适配wayland下的主屏
  * lrelease kds.pro解决在990上的汉化问题

 -- hebing <hebing@kylinos.cn>  Thu, 25 Feb 2021 10:02:30 +0800

kylin-display-switch (3.0.12kylin4) v101; urgency=medium

  * 根据系统语言选择国际化文件

 -- hebing <hebing@kylinos.cn>  Sun, 07 Feb 2021 16:24:41 +0800

kylin-display-switch (3.0.12kylin3) v101; urgency=medium

  * 飞行模式返回的非全no非全yes状态由1改为0
  * 非勾选文字与勾选文字垂直对齐

 -- hebing <hebing@kylinos.cn>  Wed, 03 Feb 2021 19:25:32 +0800

kylin-display-switch (3.0.12kylin2~hw3) v101; urgency=medium

  * 适配990笔记本的Wlan功能
  * 通过获取任务栏高度决定mkt的高度

 -- hebing <hebing@kylinos.cn>  Tue, 02 Feb 2021 09:11:20 +0800

kylin-display-switch (3.0.12kylin2) v101; urgency=medium

  * 针对部分机型，功能由硬件实现，仅弹出提示图标

 -- hebing <hebing@kylinos.cn>  Thu, 28 Jan 2021 16:35:08 +0800

kylin-display-switch (3.0.12kylin1~hw2) v101; urgency=medium

  * kds增加KScreen接口实现，并且屏蔽其他屏模式

 -- hebing <hebing@kylinos.cn>  Wed, 27 Jan 2021 15:29:32 +0800

kylin-display-switch (3.0.12kylin1) v101; urgency=medium

  * 接管飞行模式、禁用摄像头的键盘灯
  * 锁屏状态下不再弹出MediaKey Tip

 -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800

kylin-display-switch (3.0.11) v101; urgency=medium

  * 优化飞行模式托盘图标逻辑;优化飞行模式、蓝牙、WiFi的当前状态获取

 -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800

kylin-display-switch (3.0.10) v101; urgency=medium

  * 增加蓝牙，Wlan开启/关闭的dbus接口
  * 托盘图标切换飞行模式后增加状态提示图标
  * 不再响应Win+p，由settings-daemon响应

 -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800

kylin-display-switch (3.0.9) v101; urgency=medium

  * 逻辑重新设计，基准由主屏(可变属性)改为屏幕序号(固定属性)
  * KDS界面不在任务栏显示图标

 -- hebing <hebing@kylinos.cn>  Fri, 15 Jan 2021 20:18:21 +0800

kylin-display-switch (3.0.8) v101; urgency=medium

  * 增加飞行模式
  * 增加一键锁屏
  * 增加一键关屏

 -- hebing <hebing@kylinos.cn>  Mon, 21 Dec 2020 16:17:38 +0800
