@@ -1,3 +1,9 @@
+kylin-display-switch (3.0.13kylin5) v101; urgency=medium
+
+  * 代码优化，通过修改宏定义控制选项数量
+
+ -- hebing <hebing@kylinos.cn>  Fri, 26 Feb 2021 21:06:30 +0800
+
 kylin-display-switch (3.0.12kylin5) v101; urgency=medium
 
   * KDS按下任意按键退出，屏蔽X86Display。
